@@ -28,11 +28,22 @@ NON-TECH
    *. Fighter - Weapons Training (or Karate Training for Monks) -- non-kill way to gain xp, makes mobs slightly harder, 1 level up max.
    *. Fighter -- AUTOGUARD can start a little "Guarding" prog for, say, 10 rl minutes.
    *. Classes with insufficient unique skills:
-        *. Ranger        : +9
-        *. Ranger ideas  : Camoflauge, Repel Vermin, Wind Wall (protect/arrow), Detect Snares/Pits, Delay Poison, Sense Poison, Calm Animals, Speak with Animals, Snare
+        *. Ranger        : +8
+                         : Repel Vermin
+                         : Wind Wall (protect/arrow)
+                         : Detect Snares/Pits
+                         : Delay Poison
+                         : Sense Poison
+                         : Calm Animals
+                         : Speak with Animals
+                         : Snare
         *. Paladin       : +6
-        *. Paladin ideas : Shared Fate (Paladin and mount share bad effects instead of only Paladin), Shared Vision (can see through
-                         : mounts eyes), Death Ward (negative energy ward), Resurrect Mount, Heal Mount, Abide (prevent death for few mins),
+                         : Shared Fate (Paladin and mount share bad effects instead of only Paladin)
+                         : Shared Vision (can see through mounts eyes)
+                         : Death Ward (negative energy ward)
+                         : Resurrect Mount
+                         : Heal Mount
+                         : Abide (prevent death for few mins),
    *. Wants and Needs engine - similar to slavery system
    *. RandomQuests based off the Percolator engine -- a way to randomly generate different quests.
    *. Rideables with some portal you could enter for below decks, etc.
