@@ -127,6 +127,7 @@ public class Ranger extends StdCharClass
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),14,"Chant_SummonPeace",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),14,"Chant_VenomWard",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),14,"Ranger_Hide",false);
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),15,"Ranger_WoodlandLore",true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),15,"Fighter_CriticalShot",false);
@@ -153,7 +154,7 @@ public class Ranger extends StdCharClass
 		CMLib.ableMapper().addCharAbilityMapping(ID(),20,"Chant_WaterWalking",false);
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),21,"Chant_GasWard",false);
-		CMLib.ableMapper().addCharAbilityMapping(ID(),21,"Ranger_Hide",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),21,"Ranger_Camouflage",false,CMParms.parseSemicolons("Ranger_Hide",true));
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),22,"Chant_SummonAnimal",true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),22,"Chant_Sunray",false);
