@@ -300,6 +300,14 @@ The thief drops numerous small metal spikes on the ground around him or her. \
 While the thief will be able to avoid them, anyone entering, leaving, \
 advancing, or retreating from the room will be damaged by them.
 
+CAMOUFLAGE=RANGER_CAMOUFLAGE
+RANGER_CAMOUFLAGE=<ABILITY>\
+Usage    : CAMOUFLAGE [TARGET]\n\r\
+Example  : camouflage bob\n\r\
+Example  : camouflage table\n\r\
+The ranger covers the target so that they resemble the surrounding country, making \
+them more difficult to see.
+
 CUTTHROAT=CUT_THROAT
 CT=CUT_THROAT
 CUT_THROAT=<ABILITY>\
